--- a/growth_model/templates/index.html
+++ b/growth_model/templates/index.html
@@ -54,6 +54,9 @@
         <label for="g_rate">Growth Rate:</label>
         <input type="range" id="g_rate" name="g_rate" placeholder="0.2" min="0.1" max="1" step="0.01" value="0.15">
         <span id="g_rate_val">0.15</span><br><br>
+
+        <label for="Species to model"></label>
+        <input type="checkbox" id="species" name="species" value="ecoli" checked>
         
 
         <input type="submit" value="Submit">
