add in a tealish background because why not

--- a/growth_model/templates/index.html
+++ b/growth_model/templates/index.html
@@ -9,12 +9,16 @@
             margin: auto;
             align-self: center;
         }
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #10B2A2;
+        }
 
-            </style>
+    </style>
 
 </head>
 <body>
-    
 
 <h1>
     <form id="growthform" method="POST" action="{% url 'index' %}">
